# DocuMind

./: .gitignore  README.md  README_VN.md  docker-compose.yml  pyproject.toml
ai/: demo_inference.py  requirements.txt  test_qa.py  test_sum.py
ai/configs/: bartpho_summarization.yaml  phobert_qa.yaml  vit5_summarization.yaml  xlmroberta_qa.yaml
ai/scripts/data_load/: clean_data.py  download_data.py  download_full_models.py  fix_vit5.py  preprocess_data.py  reclean_viquad.py  verify_data.py  visualize_data.py
ai/scripts/test/: extract_json_logs.py
ai/scripts/visualize/: advanced_eda.py  peek_data.py  verify_cleaned_data.py
ai/src/: __init__.py  eval_qa.py  logger.py
ai/src/eval/: eval_qa.py  eval_sum.py
ai/src/metrics/: ai_backup.code-workspace  metric_qa.py  metric_sum.py
ai/src/models/: build_qa.py  build_sum.py
backend/: Dockerfile  main.py
backend/processor/: document_processor.py
docs/: docker_setup.md  docker_setup_vn.md  local_setup.md  local_setup_vn.md
docs/en/: AI_DIRECTORY.md  AI_MODELS.md  ARCHITECTURE.md  DOCUMENT_PROCESSOR.md  FEATURES.md  INSTALLATION.md
docs/vi/: AI_DIRECTORY.md  AI_MODELS.md  DOCUMENT_PROCESSOR.md  FEATURES.md  INSTALLATION.md
landing_page/: index.html  main.js  style.css
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
scripts/: reset_db_all.py
tests/: test_docling_processor.py  test_document_embedding.py  test_embedding_service.py  test_phobert_qa.py
(+62 files in other folders)
