[project]
name = "documind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "docling>=2.92.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.34.0",
    "passlib[bcrypt]>=1.7.4",
    "peft>=0.19.1",
    "pgvector>=0.4.2",
    "protobuf>=7.34.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "sentencepiece>=0.2.1",
    "sqlmodel>=0.0.38",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "uvicorn>=0.46.0",
]
